@@ -441,6 +441,11 @@ public class ClientException extends BaseException {
     public static final String PASSKEY_PROTOCOL_REQUEST_PARSING_ERROR = "passkey_protocol_request_parsing_error";
 
     /**
+     * A blocking operation has timed out.
+     */
+    public static final String TIMED_OUT = "timed_out";
+
+    /**
      * Constructor of ClientException.
      *
      * @param errorCode String
