@@ -9,6 +9,7 @@ V.Next
 - [PATCH] Return API error and errorDescription in case of unexpected response (#2431)
 - [MINOR] Support certificate with password (#2405)
 - [PATCH] Return API error and errorDescription in case of unexpected response (#2431)
+- [MINOR] Classifying TimeoutException as timed_out (#2441)
 
 Version 17.5.0
 ---------
